Add fallback to committed dist folder when auto-build fails

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
       - 'build.js'
       - 'src/**'
       - '.github/workflows/deploy.yml'
+      - 'dist/**'
   workflow_dispatch:
 
 permissions:
@@ -38,15 +39,30 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Build site
+      - name: Build site (attempt automatic build)
+        id: build
         run: npm run build
-        continue-on-error: false
+        continue-on-error: true
+        
+      - name: Check build status
+        run: |
+          if [ -d "dist" ] && [ "$(ls -A dist)" ]; then
+            echo "✅ Build successful or dist folder exists"
+            echo "BUILD_SUCCESS=true" >> $GITHUB_ENV
+          else
+            echo "❌ Build failed and no dist folder found"
+            echo "BUILD_SUCCESS=false" >> $GITHUB_ENV
+            echo "::warning::Automatic build failed. Please build locally and commit dist folder."
+            exit 1
+          fi
         
       - name: Upload artifact
+        if: env.BUILD_SUCCESS == 'true'
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
           
       - name: Deploy to GitHub Pages
         id: deployment
+        if: env.BUILD_SUCCESS == 'true'
         uses: actions/deploy-pages@v4
